--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <nav>
-        <a href="views/index.html">Inicio</a>
+        <a href="index.html">Inicio</a>
         <a href="views/quem_somos.html">Quem Somos</a>
         <a href="views/contato.html">Contato</a>
         <a href="views/favoritos.html" class="alinhar">
